.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Activity_Correspondence__c.object
<CustomObject>
    <description>Correspondence configuration for activities</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables/disables this correspondence</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Outcome__c</fullName>
        <description>If this correspondence is of Service Activity type and it runs one complete what activity outcomes is it valid for</description>
        <label>Activity Outcomes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Correspondence__c</fullName>
        <label>Correspondence</label>
        <referenceTo>Incap311__Correspondence__c</referenceTo>
        <relationshipLabel>Activity  Correspondences</relationshipLabel>
        <relationshipName>Activity_Correspondents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Distribution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The distribution list to which the correspondence is sent</description>
        <label>Distribution</label>
        <referenceTo>Incap311__Distributions__c</referenceTo>
        <relationshipLabel>Activity Correspondences</relationshipLabel>
        <relationshipName>Activity_Correspondences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable if an email is sent when a correspondence is triggered</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Send_To__c</fullName>
        <description>Who to send the correspondence to</description>
        <label>Send To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned To</fullName>
                </value>
                <value>
                    <fullName>SR Contact</fullName>
                    <default>true</default>
                    <label>SR Contact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version_Activity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Service Type Version Activity that triggers this correspondence</description>
        <label>Service Type Version Activity</label>
        <referenceTo>Incap311__Service_Type_Version_Activity__c</referenceTo>
        <relationshipLabel>Activity Correspondence</relationshipLabel>
        <relationshipName>Activity_Correspondents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Template_Merge_Target__c</fullName>
        <description>If this is going to be merged with a template select it here</description>
        <label>Template Merge Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Service Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Type__c</fullName>
        <description>The type of correspondence. Different types trigger the correspondence creation based on different rules</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Activity Correspondence</label>
    <nameField>
        <displayFormat>AC-{0000000}</displayFormat>
        <label>Activity Correspondence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Correspondences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>